--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_DATABASE=laravel
 DB_USERNAME=laravel
 DB_PASSWORD=secret
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
@@ -36,8 +36,6 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=rabbitmq
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
 
 CACHE_STORE=database
 CACHE_PREFIX=
@@ -65,3 +63,5 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+DOCTRINE_PROXY_AUTOGENERATE=true
