--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "darkaonline/l5-swagger": "^8.6",
+        "doctrine/dbal": "^4.2",
+        "doctrine/orm": "^3.4",
+        "laravel-doctrine/orm": "^3.1",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "darkaonline/l5-swagger": "^8.6",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^14.2"
     },
     "require-dev": {
@@ -23,6 +26,11 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Domain\\": "src/Domain/",
+            "Application\\": "src/Application/",
+            "Shared\\": "src/Shared/",
+            "Infrastructure\\": "src/Infrastructure/",
+            "Interfaces\\": "src/Interfaces/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
