--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 DOCTRINE_PROXY_AUTOGENERATE=true
+
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=laravel
+RABBITMQ_PASSWORD=secret
