--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "darkaonline/l5-swagger": "^8.6",
         "doctrine/dbal": "^4.2",
         "doctrine/orm": "^3.4",
+        "intervention/image": "^2.7.2",
         "laravel-doctrine/orm": "^3.1",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
